--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -36,7 +36,12 @@
   margin-bottom: 38px;
 
   @media (min-width: $tablet-width) {
+    max-width: 350px;
     margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 500px;
   }
 }
 
