--- a/source/sass/blocks/sublist.scss
+++ b/source/sass/blocks/sublist.scss
@@ -10,5 +10,6 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-wrap: wrap;
   }
 }
